# Azure-VM-setup

./: README.md  pyproject.toml  vm-create.sh  vm-setup.sh
