[tool.poetry]
name = "LLM server"
version = "0.1.0"
description = "This part of the repository contians all the requirements for running a large language model server that follows the OpenAI API format."
authors = ["Marten Koopmans"]
readme = "README.md"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.dependencies]
python = "3.10.6"
torch = {version = "^2.0.1+cu118", source = "pytorch-cu118"}
torchaudio = {version = "^2.0.2+cu118", source = "pytorch-cu118"}
torchvision = {version = "^0.15.2+cu118", source = "pytorch-cu118"}
sentencepiece = "^0.1.99"
fschat = "^0.2.18"
protobuf = "^4.23.4"
tensorflow = "^2.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
